...
                        SVProgressHUD.showProgress(Float(progress.fractionCompleted), status: "NOW UPLOADING...")
                    } },
                completion: { response in
                    switch response.result {
                    case .success:
                        DispatchQueue.main.async() {
                            SVProgressHUD.showSuccess(withStatus: "UPLOAD SUCCEED!!!")
                        }
                        print("Validation Successful")
                    case .failure(let error):
                        DispatchQueue.main.async() {
                            SVProgressHUD.showError(withStatus: "UPLOAD FAILED!!!")
                        }
...
